# arrival-atlas

./: .env.example  .gitignore  .prettierignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vercel.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  data-refresh.yml  release.yml
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  DEPLOYMENT.md  METRICS.md  RELEASES.md
docs/releases/: v0.1.0.md
pipeline/: __init__.py  aggregate.py  cli.py  config.py  dataset_card.py  quality.py  reference.py  source.py  transform.py
scripts/: check-links.mjs  publish_dataset.py  verify-production.mjs
src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/app/airport/: page.tsx
src/app/methodology/: page.tsx
src/app/route/: page.tsx
src/components/: copy-route-link.test.tsx  copy-route-link.tsx  data-quality-snapshot.tsx  landing-data.tsx  route-ribbon.test.tsx  route-ribbon.tsx  route-search.tsx  site-footer.tsx  site-header.tsx
src/components/charts/: chart-card.tsx  chart.tsx
src/components/explorer/: airport-explorer.tsx  route-explorer.tsx
src/components/ui/: button.tsx  card.tsx  data-notice.tsx  metric-help.tsx  select-field.test.tsx  select-field.tsx  state-panel.tsx
src/lib/: data.ts  format.test.ts  format.ts  types.ts
tests/: conftest.py  test_aggregate.py  test_config.py  test_transform.py
tests/e2e/: main-flow.spec.ts
